--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -57,6 +57,21 @@ div {
   top: 120px;
   left: 80px;
   z-index: 100;
+  &::after {
+    content: '';
+    margin-left: 2px;
+    border-right: 2px solid #fff;
+    animation: cursor 0.9s infinite steps(2);
+  }
+}
+
+@keyframes cursor {
+  from {
+    border-right: 2px solid #111;
+  }
+  to {
+    border-right: 2px solid #fff;
+  }
 }
 
 /* main_wrapper default */
@@ -171,6 +186,27 @@ div {
         display: flex;
         justify-content: center;
       }
+      .stage_3-4 {
+        width: 100vw;
+        min-width: 100vw;
+        background-color: lighten(#e38a8a, 10%);
+        display: flex;
+        justify-content: center;
+      }
+      .stage_3-5 {
+        width: 100vw;
+        min-width: 100vw;
+        background-color: lighten(#e38a8a, 10%);
+        display: flex;
+        justify-content: center;
+      }
+      .stage_3-6 {
+        width: 100vw;
+        min-width: 100vw;
+        background-color: lighten(#e38a8a, 10%);
+        display: flex;
+        justify-content: center;
+      }
     }
     .content_4 {
       background-color: #dfd6cf;
@@ -210,9 +246,11 @@ article {
   width: 550px;
   background-color: #fff;
   border-radius: 10px;
+  padding: 20px;
   -webkit-box-shadow: 8px 10px 6px 0px rgba(0, 0, 0, 0.7);
   box-shadow: 8px 10px 6px 0px rgba(0, 0, 0, 0.7);
   transition: all 0.3s;
+  box-sizing: border-box;
   &:hover {
     cursor: pointer;
   }
@@ -226,14 +264,71 @@ article {
 
 /* stage_1-1 */
 .stage_1-1 {
-  .content_Wrapper {
+  .content_wrapper {
     position: relative;
+    display: flex;
+    justify-content: center;
+
+    .about_me {
+      margin-top: 100px;
+      font-size: 200px;
+      font-weight: 900;
+    }
     article.title_about {
+      width: 1000px;
+      height: 300px;
       position: absolute;
-      top: 50%;
+      top: 70%;
       left: 50%;
       transform: translate(-50%, -50%);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      &:hover {
+        transform: translate(-50%, -49%);
+      }
+      img {
+        width: 50px;
+      }
+      .about_first,
+      .about_second {
+        width: 100%;
+        height: 50%;
+        display: flex;
+        justify-content: space-evenly;
+        .name,
+        .birth,
+        .addr,
+        .phone,
+        .email,
+        .blog {
+          width: 250px;
+          display: flex;
+          align-items: center;
+          img {
+            margin-right: 20px;
+          }
+          & > div > div:first-child {
+            margin-bottom: 30px;
+            span {
+              border-bottom: 2px solid#222;
+            }
+          }
+          & > div > div:nth-child(2) {
+            font-size: 18px;
+          }
+          .blog_content a {
+            text-decoration: none;
+          }
+        }
+      }
     }
+  }
+  .clickMe {
+    position: absolute;
+    bottom: 75px;
+    right: 40px;
+    transform: rotateZ(-30deg);
   }
 }
 
@@ -346,6 +441,20 @@ article {
       img {
         margin: 10px;
       }
+    }
+  }
+}
+
+/* stage_3-1 */
+
+.stage_3-1 {
+  .content_wrapper {
+    width: 60%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    article.pocari {
+      width: 500px;
     }
   }
 }
