--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -9,11 +9,19 @@
   src: url('./fonts/Jua-Regular.ttf');
 }
 @font-face {
-  font-family: 'NotoSansKR';
+  font-family: 'NotoSansKR-Thin';
   font-weight: 400;
-  src: url('./fonts/NotoSansKR-Black.otf'), url('./fonts/NotoSansKR-Bold.otf'),
-    url('./fonts/NotoSansKR-Light.otf'), url('./fonts/NotoSansKR-Medium.otf'),
-    url('./fonts/NotoSansKR-Regular.otf'), url('./fonts/NotoSansKR-Thin.otf');
+  src: url('./fonts/NotoSansKR-Thin.otf'), url('./fonts/NotoSansKR-Black.otf'),
+    url('./fonts/NotoSansKR-Bold.otf'), url('./fonts/NotoSansKR-Light.otf'),
+    url('./fonts/NotoSansKR-Medium.otf'), url('./fonts/NotoSansKR-Regular.otf'),
+    url('./fonts/NotoSansKR-Thin.otf');
+}
+@font-face {
+  font-family: 'NotoSansKR-Medium';
+  font-weight: 400;
+  src: url('./fonts/NotoSansKR-Medium.otf'), url('./fonts/NotoSansKR-Thin.otf'),
+    url('./fonts/NotoSansKR-Black.otf'), url('./fonts/NotoSansKR-Bold.otf'),
+    url('./fonts/NotoSansKR-Light.otf');
 }
 
 /* common */
@@ -29,6 +37,18 @@ body::-webkit-scrollbar {
 }
 div {
   box-sizing: border-box;
+}
+a {
+  color: #000;
+  text-decoration: none;
+  outline: none;
+}
+
+a:hover,
+a:active {
+  text-decoration: none;
+  color: #000;
+  // background-color: #f59000;
 }
 
 .content_wrapper {
@@ -137,6 +157,15 @@ div {
     }
   }
 
+  @keyframes dotScale {
+    from {
+      transform: scale(1);
+    }
+    to {
+      transform: scale(1.2);
+    }
+  }
+
   .contents {
     font-family: 'Jua', 'NanumSquare';
     transition: all 1s;
@@ -145,13 +174,48 @@ div {
       display: flex;
       justify-content: flex-start;
       .stage_1-1 {
+        position: relative;
         width: 100vw;
+        height: 100vh;
         display: flex;
         justify-content: center;
         color: #fff;
         background-color: #000;
         article {
           color: #000;
+        }
+        .dot:first-child {
+          position: absolute;
+          top: -150px;
+          right: -150px;
+          width: 300px;
+          height: 300px;
+          border-radius: 50%;
+          animation: dotScale 2.5s alternate-reverse infinite;
+          background-color: #fff;
+        }
+        .dot:nth-child(2) {
+          position: absolute;
+          top: 25vh;
+          left: 20vw;
+          width: 400px;
+          height: 400px;
+          border-radius: 50%;
+          animation: dotScale 3s alternate-reverse infinite;
+          background-color: #fff;
+        }
+        .dot:nth-child(3) {
+          position: absolute;
+          top: 80vh;
+          left: 80vw;
+          width: 200px;
+          height: 200px;
+          border-radius: 50%;
+          animation: dotScale 2s alternate-reverse infinite;
+          background-color: #fff;
+        }
+        .about_me {
+          mix-blend-mode: difference;
         }
       }
     }
@@ -256,6 +320,8 @@ div {
     }
     .content_5 {
       background-color: #a69777;
+      width: 100vw;
+      background-color: #000;
     }
   }
 }
@@ -441,6 +507,9 @@ article {
         width: 200px;
         margin: 10px auto 10px;
       }
+      img {
+        margin: 10px;
+      }
     }
     article.communication {
       position: absolute;
@@ -501,6 +570,7 @@ article {
         img {
           width: 98px;
           border: 1px solid #777;
+          cursor: pointer;
         }
         .big_image {
           width: 100%;
@@ -548,7 +618,7 @@ article {
       box-shadow: 0px 0px 33px 16px rgba(255, 255, 255, 0.8);
 
       & > section > h2 > span {
-        font-family: 'NotoSansKR';
+        font-family: 'NotoSansKR-Medium';
         border-bottom: 2px solid #777;
         font-size: 35px;
         font-weight: 900;
@@ -592,6 +662,7 @@ article {
 /* stage_4-1 */
 
 .stage_4-1 {
+  overflow: hidden;
   .content_wrapper {
     border: 1px solid black;
     width: 100vw;
@@ -615,17 +686,35 @@ article {
     }
 
     .time_line_list {
+      position: relative;
       font-weight: 100;
-      font-size: 13px;
+      font-size: 12px;
       display: flex;
       width: 100%;
       min-width: 1200px;
       height: calc((100vh - 260px) / 25);
       max-height: calc((100vh - 260px) / 25);
       margin: 2px 0;
-      img {
-        height: 90%;
+      &.focused {
+        background-color: #ddd;
+        span {
+          font-size: 13px;
+        }
       }
+      a {
+        display: flex;
+        justify-content: start;
+        align-items: center;
+        height: 100%;
+        img {
+          height: 90%;
+        }
+        span {
+          margin: 0 8px;
+          cursor: pointer;
+        }
+      }
+
       .time_line_label {
         font-family: 'NanumSquare';
         font-weight: 800;
@@ -639,14 +728,12 @@ article {
         align-items: center;
         opacity: 0;
         transition: all 5s;
-        line-height: 20px;
+        line-height: 16px;
         &.on {
           opacity: 1;
         }
-        span {
-          margin-left: 8px;
-        }
       }
+
       .time_line_item_wrapper {
         flex: 12 1 0;
         height: 20px;
@@ -659,7 +746,7 @@ article {
           height: 100%;
           border-radius: 10px;
           cursor: pointer;
-          &.book1 {
+          &.js1Grade {
             left: calc((8 / 12) * 100%); // 시작날짜
             width: 0;
             transition: width 3s ease-in-out;
@@ -667,76 +754,44 @@ article {
               width: calc((0.5 / 12) * 100%); // 기간
             }
           }
-          &.book2 {
+          &.django {
             left: calc((10 / 12) * 100%); // 시작날짜
             width: 0;
             transition: width 3s;
             &.on {
-              width: 20%; // 기간
+              width: calc((2.1 / 12) * 100%); // 기간
             }
           }
-          &.book3 {
-            left: 40%;
+          &.doIt {
+            left: calc((11.5 / 12) * 100%); // 시작날짜
             width: 0;
             transition: width 3s;
             &.on {
-              width: 10%; // 기간
+              width: calc((2.1 / 12) * 100%); // 기간
             }
           }
-          &.book4 {
-            left: 60%;
+          &.lifeHtmlCss {
+            left: calc((7.5 / 12) * 100%); // 시작날짜
             width: 0;
             transition: width 3s;
             &.on {
-              width: 30%; // 기간
+              width: calc((1 / 12) * 100%); // 기간
             }
           }
-          &.book5 {
-            left: 70%;
+          &.lifeJs {
+            left: calc((8.5 / 12) * 100%); // 시작날짜
             width: 0;
             transition: width 3s;
             &.on {
-              width: 30%; // 기간
+              width: calc((2 / 12) * 100%); // 기간
             }
           }
-          &.book6 {
-            left: 90%;
+          &.lifeGit {
+            left: calc((10.5 / 12) * 100%); // 시작날짜
             width: 0;
             transition: width 3s;
             &.on {
-              width: 11%; // 기간
-            }
-          }
-          &.book7 {
-            left: 90%;
-            width: 0;
-            transition: width 3s;
-            &.on {
-              width: 11%; // 기간
-            }
-          }
-          &.video1 {
-            left: 90%;
-            width: 0;
-            transition: width 3s;
-            &.on {
-              width: 11%; // 기간
-            }
-          }
-          &.video2 {
-            left: 90%;
-            width: 0;
-            transition: width 3s;
-            &.on {
-              width: 11%; // 기간
-            }
-          }
-          &.video3 {
-            left: 90%;
-            width: 0;
-            transition: width 3s;
-            &.on {
-              width: 11%; // 기간
+              width: calc((1 / 12) * 100%); // 기간
             }
           }
         }
@@ -748,12 +803,13 @@ article {
 /* stage_4-2 */
 
 .stage_4-2 {
+  overflow: hidden;
   .content_wrapper {
     border: 1px solid black;
     width: 100vw;
     padding-left: 30px;
     .time_line_header {
-      margin-top: 100px;
+      margin-top: 70px;
       width: 100%;
       min-width: 1200px;
       display: flex;
@@ -771,15 +827,38 @@ article {
     }
 
     .time_line_list {
-      overflow: hidden;
+      position: relative;
+      font-weight: 100;
+      font-size: 12px;
       display: flex;
       width: 100%;
       min-width: 1200px;
-      height: calc((100vh - 260px) / 24);
-      img {
-        height: 100%;
+      height: calc((100vh - 260px) / 25);
+      max-height: calc((100vh - 260px) / 25);
+      margin: 2px 0;
+      &.focused {
+        background-color: #ddd;
+        span {
+          font-size: 13px;
+        }
       }
+      a {
+        display: flex;
+        justify-content: start;
+        align-items: center;
+        height: 100%;
+        img {
+          height: 90%;
+        }
+        span {
+          margin: 0 8px;
+          cursor: pointer;
+        }
+      }
+
       .time_line_label {
+        font-family: 'NanumSquare';
+        font-weight: 800;
         flex: 2 1 0;
         width: 300px;
         min-width: 300px;
@@ -790,10 +869,12 @@ article {
         align-items: center;
         opacity: 0;
         transition: all 5s;
+        line-height: 16px;
         &.on {
           opacity: 1;
         }
       }
+
       .time_line_item_wrapper {
         flex: 12 1 0;
         height: 20px;
@@ -805,63 +886,336 @@ article {
           background-color: #000;
           height: 100%;
           border-radius: 10px;
-          &.book8 {
-            left: 20%; // 시작날짜
-            width: 0;
-            transition: width 3s ease-in-out;
-            &.on {
-              width: 20%; // 기간
-            }
-          }
-          &.book9 {
-            left: 30%;
+          cursor: pointer;
+          &.django {
+            left: calc((0 / 12) * 100%); // 시작날짜
             width: 0;
             transition: width 3s;
             &.on {
-              width: 20%; // 기간
+              width: calc((1.5 / 12) * 100%); // 기간
             }
           }
-          &.book10 {
-            left: 40%;
+          &.doIt {
+            left: calc((0 / 12) * 100%); // 시작날짜
             width: 0;
             transition: width 3s;
             &.on {
-              width: 10%; // 기간
+              width: calc((1 / 12) * 100%); // 기간
             }
           }
-          &.book11 {
-            left: 60%;
+          &.deepDive {
+            left: calc((1.5 / 12) * 100%); // 시작날짜
             width: 0;
             transition: width 3s;
             &.on {
-              width: 30%; // 기간
+              width: calc((4 / 12) * 100%); // 기간
             }
           }
-          &.book12 {
-            left: 70%;
+          &.reactSkill {
+            left: calc((3 / 12) * 100%); // 시작날짜
             width: 0;
             transition: width 3s;
             &.on {
-              width: 30%; // 기간
+              width: calc((2 / 12) * 100%); // 기간
             }
           }
-          &.book13 {
-            left: 90%;
+          &.react {
+            left: calc((5.5 / 12) * 100%); // 시작날짜
             width: 0;
             transition: width 3s;
             &.on {
-              width: 11%; // 기간
+              width: calc((1 / 12) * 100%); // 기간
             }
           }
-          &.book14 {
-            left: 90%;
+          &.nextJs {
+            left: calc((7.5 / 12) * 100%); // 시작날짜
             width: 0;
             transition: width 3s;
             &.on {
-              width: 11%; // 기간
+              width: calc((1 / 12) * 100%); // 기간
+            }
+          }
+          &.fastCampus {
+            left: calc((4 / 12) * 100%); // 시작날짜
+            width: 0;
+            transition: width 3s;
+            &.on {
+              width: calc((3 / 12) * 100%); // 기간
+            }
+          }
+          &.appleHtmlCss {
+            left: calc((7 / 12) * 100%); // 시작날짜
+            width: 0;
+            transition: width 3s;
+            &.on {
+              width: calc((0.5 / 12) * 100%); // 기간
+            }
+          }
+          &.appleJquery {
+            left: calc((7.5 / 12) * 100%); // 시작날짜
+            width: 0;
+            transition: width 3s;
+            &.on {
+              width: calc((1 / 12) * 100%); // 기간
+            }
+          }
+          &.appleJs {
+            left: calc((8.5 / 12) * 100%); // 시작날짜
+            width: 0;
+            transition: width 3s;
+            &.on {
+              width: calc((1 / 12) * 100%); // 기간
+            }
+          }
+          &.appleNode {
+            left: calc((9.5 / 12) * 100%); // 시작날짜
+            width: 0;
+            transition: width 3s;
+            &.on {
+              width: calc((1 / 12) * 100%); // 기간
+            }
+          }
+          &.appleReact {
+            left: calc((10.5 / 12) * 100%); // 시작날짜
+            width: 0;
+            transition: width 3s;
+            &.on {
+              width: calc((1 / 12) * 100%); // 기간
+            }
+          }
+          &.appleTs {
+            left: calc((11.5 / 12) * 100%); // 시작날짜
+            width: 0;
+            transition: width 3s;
+            &.on {
+              width: calc((0.6 / 12) * 100%); // 기간
             }
           }
         }
+      }
+    }
+  }
+}
+
+/* stage_4-3 */
+
+.stage_4-3 {
+  overflow: hidden;
+  .content_wrapper {
+    border: 1px solid black;
+    width: 100vw;
+    padding-left: 30px;
+    .time_line_header {
+      margin-top: 70px;
+      width: 100%;
+      min-width: 1200px;
+      display: flex;
+      justify-content: space-around;
+      .time_line_year {
+        flex: 2 1 0;
+        margin: 0 auto;
+        width: 300px;
+        min-width: 300px;
+        max-width: 300px;
+      }
+      .time_line_month {
+        flex: 1 1 0;
+      }
+    }
+
+    .time_line_list {
+      position: relative;
+      font-weight: 100;
+      font-size: 12px;
+      display: flex;
+      width: 100%;
+      min-width: 1200px;
+      height: calc((100vh - 260px) / 25);
+      max-height: calc((100vh - 260px) / 25);
+      margin: 2px 0;
+      &.focused {
+        background-color: #ddd;
+        span {
+          font-size: 13px;
+        }
+      }
+      a {
+        display: flex;
+        justify-content: start;
+        align-items: center;
+        height: 100%;
+        img {
+          height: 90%;
+        }
+        span {
+          margin: 0 8px;
+          cursor: pointer;
+        }
+      }
+
+      .time_line_label {
+        font-family: 'NanumSquare';
+        font-weight: 800;
+        flex: 2 1 0;
+        width: 300px;
+        min-width: 300px;
+        max-width: 300px;
+        margin: 0 auto;
+        display: flex;
+        justify-content: start;
+        align-items: center;
+        opacity: 0;
+        transition: all 5s;
+        line-height: 16px;
+        &.on {
+          opacity: 1;
+        }
+      }
+
+      .time_line_item_wrapper {
+        flex: 12 1 0;
+        height: 20px;
+        margin: auto 0;
+        position: relative;
+        .time_line_item {
+          position: absolute;
+          top: 0;
+          background-color: #000;
+          height: 100%;
+          border-radius: 10px;
+          cursor: pointer;
+          &.it {
+            left: calc((1 / 12) * 100%); // 시작날짜
+            width: 0;
+            transition: width 3s;
+            &.on {
+              width: calc((2 / 12) * 100%); // 기간
+            }
+          }
+          &.yalco {
+            left: calc((3 / 12) * 100%); // 시작날짜
+            width: 0;
+            transition: width 3s;
+            &.on {
+              width: calc((0.5 / 12) * 100%); // 기간
+            }
+          }
+          &.perfectJs {
+            left: calc((3.5 / 12) * 100%); // 시작날짜
+            width: 0;
+            transition: width 3s;
+            &.on {
+              width: calc((5 / 12) * 100%); // 기간
+            }
+          }
+          &.computer {
+            left: calc((6 / 12) * 100%); // 시작날짜
+            width: 0;
+            transition: width 3s;
+            &.on {
+              width: calc((2 / 12) * 100%); // 기간
+            }
+          }
+          &.modern {
+            left: calc((7 / 12) * 100%); // 시작날짜
+            width: 0;
+            transition: width 3s;
+            &.on {
+              width: calc((2 / 12) * 100%); // 기간
+            }
+          }
+          &.appleTs {
+            left: calc((0 / 12) * 100%); // 시작날짜
+            width: 0;
+            transition: width 3s;
+            &.on {
+              width: calc((1 / 12) * 100%); // 기간
+            }
+          }
+          &.lifeLinux {
+            left: calc((2 / 12) * 100%); // 시작날짜
+            width: 0;
+            transition: width 3s;
+            &.on {
+              width: calc((2 / 12) * 100%); // 기간
+            }
+          }
+          &.dreamGit {
+            left: calc((5 / 12) * 100%); // 시작날짜
+            width: 0;
+            transition: width 3s;
+            &.on {
+              width: calc((3 / 12) * 100%); // 기간
+            }
+          }
+          &.dreamBrowser {
+            left: calc((9 / 12) * 100%); // 시작날짜
+            width: 0;
+            transition: width 3s;
+            &.on {
+              width: calc((2 / 12) * 100%); // 기간
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+.stage_5-1 {
+  .content_wrapper {
+    font-family: 'NotoSansKR-Medium';
+    font-weight: 100;
+    position: relative;
+    margin: 0;
+    width: 100vw;
+    height: 100vh;
+    .time_line_wrapper {
+      margin: 100px auto;
+      position: relative;
+      width: 80%;
+      height: 100px;
+      display: flex;
+      align-items: center;
+      .line {
+        background-color: #fff;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 100%;
+        height: 8px;
+      }
+      .line_point {
+        width: 30px;
+        height: 30px;
+        background-color: #fff;
+        border-radius: 50%;
+      }
+      .line_point_wrapper {
+        position: relative;
+        width: 45%;
+        article {
+          width: 400px;
+          min-width: 400px;
+          max-width: 400px;
+          position: absolute;
+          top: 100px;
+          left: 0;
+          h2 {
+            margin-bottom: 10px;
+          }
+          h4 {
+            margin: 5px 0;
+            color: #777;
+          }
+          p > ul > li > ul {
+            margin-bottom: 15px;
+          }
+        }
+      }
+      .line_point_wrapper:nth-child(4) {
+        width: 25%;
       }
     }
   }
