--- a/src/css/modal.scss
+++ b/src/css/modal.scss
@@ -22,7 +22,7 @@
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    &.video {
+    &.video video {
       width: 80vw;
       height: 80vh;
     }
@@ -49,6 +49,7 @@
   }
   .body-content {
     width: 100%;
+    height: 90%;
     padding: 30px;
     box-sizing: border-box;
     // max-height: 759px;
@@ -68,5 +69,17 @@
     max-height: 574px;
     overflow-y: auto;
     overflow-x: hidden;
+  }
+}
+.answered_button {
+  text-align: center;
+  button {
+    width: 100px;
+    height: 30px;
+    background-color: #000;
+    color: white;
+    border-radius: 5px;
+    border: 1px solid #000;
+    cursor: pointer;
   }
 }
